# bumblestack_vm

./: .gitignore  CMakeLists.txt  LICENSE  PY_DIR  README.md  build-wasm.sh  project.clang-format  requirements.txt
coding-style/: coding-style.clang-format
src/bash/: copy_lib.sh  copy_lib_post_build.sh
src/c/: app.c  app.h  app_config.h  app_scripts.c  app_scripts.h  concept.h  config.h  cycle.c  cycle.h  decision.c  decision.h  event.c  event.h  fifo.c  fifo.h  globals.c  globals.h  hashtable.c  hashtable.h  implication.h  inference.c  inference.h  invertedAtomIndex.c  invertedAtomIndex.h  io.c  io.h  lib_buffer.c  lib_buffer.h  lib_commander.c  lib_slog.c  lib_slog.h  lib_strsplit.c  lib_trim.h  lib_wildcardcmp.c  memory.c  memory.h  nal.c  nal.h  nar.c  nar.h  (+64 more)
src/c/generate_ruletable/: generate.c  generate.h  generate.sh
src/c/lib/: lib_fs.h  lib_slog.c
src/c/nars/: nars_decision.c  nars_fifo.h  nars_globals.c  nars_globals.h  nars_inference.c  nars_inverted_atom_index.c  nars_io.c  nars_io.h  nars_memory.c  nars_memory.h  nars_nar.c  nars_nar.h  nars_narsese.h  nars_stats.c  nars_variable.c  nars_variable.h
src/c/test/: unit_tests.c  unit_tests.h
src/c/test/unity/: unity.c  unity.h  unity_internals.h
src/c/wren/: wren_vm.c
src/nal/: cat.nal  marshmallow.nal
src/nar/: shapes.nar
src/perl/: test.pl
src/python/: nal.lark  parser.py  pybumble.py  pybumble.spec  test.py
src/scripts/: app_repl.c  json.wren
src/vm/: app.c  app.h  app_config.h  app_repl.c  app_repl.h  app_script_loader.c  app_script_loader.h  app_scripts.c  app_scripts.h  bumblevm_app.c  bumblevm_app.h  jim-aio.c  jim-array.c  jim-clock.c  jim-eventloop.c  jim-exec.c  jim-file.c  jim-format.c  jim-json.c  jim-load.c  jim-pack.c  jim-package.c  jim-posix.c  jim-signal.c  jim-subcmd.c  jim-subcmd.h  jim-tclprefix.c  jim-tty.c  jim-tty.h  jim.c  jim.h  jimautoconf.h  jimiocompat.h  lib_asprintf.c  lib_asprintf.h  lib_buffer.c  lib_commander.c  lib_commander.h  lib_fs.c  lib_slog.c  (+69 more)
src/vm/generate_ruletable/: generate.c  generate.h  generate.sh
src/vm/test/: unit_tests.c  unit_tests.h
src/vm/test/unity/: unity.c  unity.h  unity_internals.h
src/web/: index.html
src/web/assets/: initialise_runtime.js
util/: serve.sh  wrap_wren_for_c.sh  wren_to_c_string.py
wasm-build/: bumblestack.html  bumblestack.js  bumblestack.wasm
